tests/valid/while.myth
fn main(): void {
    let x: i32 = 0;

    while x < 10 {
        println("while");

        x += 1;
    }
}
