tests/invalid/while.myth
fn main(): void {
    let x: i32 = 0;

    while x < {
        println("while");

        x += 1;
    }

    x = 0;

    while x < 10 {
        println("while");

        x += 1
    }
}
